# embedded-serialization

./: .bazelrc  .clang-tidy  .gitignore  BUILD  CMakeLists.txt  README.md  WORKSPACE
.github/workflows/: build.yml  cmake.yml  coverage.yml  debug_test_and_coverage.yml  release_test.yml
example/: CMakeLists.txt  class_example.cpp  tuple_example.cpp
src/: endian.h  serialize.h  serialize_interface.h  size_traits.h  span.h  tuple_merge.h  type.h
tests/: BUILD  CMakeLists.txt  deserialized_type.cpp  serialize_dyn_array.cpp  serialize_enum.cpp  serialize_integer.cpp  serialize_static_array.cpp  serialize_tuple.cpp  serialize_user_defined.cpp  size_traits.cpp  span.cpp
